# Rubic-Photo-solve

./: README.md
.github/workflows/: ci.yml
魔方拍照解/: .clang-format  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  setup-dev.ps1  windows_launcher.py
魔方拍照解/cube_app/: __init__.py  coords.py  cubie.py  detection.py  fast.py  native.py  optimal.py  runtime.py  tables.py  two_by_two.py  vision.py
魔方拍照解/native/: build.ps1  build_profiled.ps1  build_tables.ps1
魔方拍照解/native/include/: cube.hpp  pdb.hpp  solver.hpp  symmetry.hpp  tail.hpp
魔方拍照解/native/src/: cube.cpp  main.cpp  pdb.cpp  solver.cpp  symmetry.cpp  tail.cpp
魔方拍照解/release/: README-Windows.txt  build_windows.ps1  check_version.py  prepare_release.ps1  启动魔方求解器.cmd
魔方拍照解/tests/: benchmark_solver.py  benchmark_vision.py  check.ps1  color.test.js  extract_real_patches.py  real_color.test.js  recognition.test.js  solver_ui.test.js  test_detection_pipeline.py  test_hybrid_api.py  test_native_solver.py  test_real_images.py  test_runtime.py  test_solver.py  test_tables.py  test_two_by_two.py  test_version.py  test_vision.py  two_by_two_color.test.js  vision_annotations.example.json
魔方拍照解/web/: app.js  color.js  index.html  solver-client.js  styles.css
